--- a/cfn-templates/dh-openvpn-cfn.yaml
+++ b/cfn-templates/dh-openvpn-cfn.yaml
@@ -31,6 +31,22 @@ Parameters:
     MaxLength: 63
     AllowedPattern: (?!^(\d{1,3}\.){3}\d{1,3}$)(^[a-z0-9]([a-z0-9-]*(\.[a-z0-9])?)*$(?<!\-))
 
+#--- The Hosted Zone Domain Name
+#-------------------------------------------
+  DomainName:
+    Description: The Hosted Zone Apex Domain Name.
+    ConstraintDescription: Specify the domain name of the project.
+    Type: String
+    Default: "cloudemprise.net"
+    AllowedPattern: ^(([a-zA-Z]{1})|([a-zA-Z]{1}[a-zA-Z]{1})|([a-zA-Z]{1}[0-9]{1})|([0-9]{1}[a-zA-Z]{1})|([a-zA-Z0-9][a-zA-Z0-9-_]{1,61}[a-zA-Z0-9]))\.([a-zA-Z]{2,6}|[a-zA-Z0-9-]{2,30}\.[a-zA-Z]{2,3})$
+
+#--- Route 53 Hosted Zone ID
+#-------------------------------------------
+  DomainHostedZoneId:
+    Description: An Amazon Route 53 hosted zone ID 
+    Type: AWS::Route53::HostedZone::Id
+#-------------------------------------------
+
 #--- Script Build Stage Counter
 #-------------------------------------------
   BuildStage: 
@@ -422,6 +438,38 @@ Resources:
       Parameters:
         OpenvpnSNSTopicARN:
           !GetAtt OpenvpnSNSTopicDef.Outputs.OpenvpnSNSTopicARN
+      TimeoutInMinutes: 5
+#-------------------------------------------
+#-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-
+
+
+#--- Route53 Record Set 
+#-------------------------------------------
+  OpenvpnR53RecordSetDef:
+    Type: AWS::CloudFormation::Stack
+    Condition: CreateResourcesStage3
+    DependsOn: NetworkLoadBalancerDef
+    Properties:
+#,,,,,,,,,,,,,,,,
+      TemplateURL:
+        !Join
+          - ""
+          - - "https://"
+            - !Ref ProjectName
+            - ".s3."
+            - !Ref "AWS::Region"
+            - ".amazonaws.com/"
+            - "cfn-templates/dh-openvpn-cfn.r53.yaml"
+#,,,,,,,,,,,,,,,,
+      Parameters:
+        OpenvpnDomainName:
+          !Ref DomainName
+        OpenvpnR53HostedZoneId:
+          !Ref DomainHostedZoneId
+        OpenvpnLoadBalancerDNS:
+          !GetAtt NetworkLoadBalancerDef.Outputs.OpenvpnLoadBalancerDNS
+        OpenvpnLoadBalancerZoneId:
+          !GetAtt NetworkLoadBalancerDef.Outputs.OpenvpnLoadBalancerZoneId
       TimeoutInMinutes: 5
 #-------------------------------------------
 #-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-o-
