--- a/cfn-templates/dh-openvpn-cfn_r53.yaml
+++ b/cfn-templates/dh-openvpn-cfn_r53.yaml
@@ -59,7 +59,7 @@ Resources:
 #.............................
     Properties:
 #.............................
-      Name: !Sub "vpntest.${OpenvpnDomainName}"
+      Name: !Sub "vpn.${OpenvpnDomainName}"
       Comment: "Openvpn Route53 Record Set"
 #.............................
       Type: "A"
