--- a/openvpn/server/dh-openvpn-server-udp1194.conf
+++ b/openvpn/server/dh-openvpn-server-udp1194.conf
@@ -12,20 +12,23 @@ remote-cert-tls client
 tls-crypt HMAC-sig.key
 dh dh.pem
 ca ca.crt
-cert dh.vpn.server.crt
-key dh.vpn.server.key
+cert dh-openvpn-server.crt
+key dh-openvpn-server.key
 cipher AES-256-GCM
 auth SHA256
 user nobody
 group nobody
 verb 4
 mute 10
-log-append /var/log/dh.vpn.server.udp1194.log
-status dh.vpn.server.udp1194.status
-ifconfig-pool-persist dh.vpn.server.udp1194.pool
+log-append /var/log/dh-openvpn-server-udp1194.log
+status dh-openvpn-server-udp1194.status
+ifconfig-pool-persist dh-openvpn-server-udp1194.pool
 tls-cipher TLS-ECDHE-ECDSA-WITH-AES-256-GCM-SHA384
 explicit-exit-notify 3
 reneg-sec 3600
 prng SHA256 64
 replay-window 64
+push "redirect-gateway def1 bypass-dhcp"
+push "dhcp-option DNS 208.67.222.222"
+push "dhcp-option DNS 208.67.220.220"
 
