--- a/cfn-templates/dh-openvpn-cfn_ec2-pub.yaml
+++ b/cfn-templates/dh-openvpn-cfn_ec2-pub.yaml
@@ -69,7 +69,7 @@ Resources:
     CreationPolicy:
       ResourceSignal:    
         Count: 1
-        Timeout: "PT5M"
+        Timeout: "PT10M"
 #.............................
     Properties:
 #.............................
@@ -120,6 +120,8 @@ Resources:
             #!/bin/bash -xe
             # Update Packages, inc. aws-cfn-bootstrap
             yum update -y
+            # Fix openssl error (easy-rsa) : random seed file 
+            export RANDFILE=/tmp/.rnd 
             # Start cfn-init
             /opt/aws/bin/cfn-init -v --configsets Step1 --stack ${AWS::StackId} --resource PublicEC2Instance --region ${AWS::Region} || error_exit 'Failed to run cfn-init'
             # Start up the cfn-hup daemon to listen for changes to the EC2 instance metadata
@@ -235,7 +237,7 @@ Resources:
                   - ".s3."
                   - !Ref "AWS::Region"
                   - ".amazonaws.com/"
-                  - "ssh/dh.cfn.openvpn-ec2-harden-ssh.sh.tar.gz"
+                  - "ssh/dh-openvpn-ec2-harden-ssh.sh.tar.gz"
           files:
             "/etc/fail2ban/jail.local":
               content: |
@@ -256,7 +258,7 @@ Resources:
               command: "mv 00-firewalld.conf 00-firewalld.disable"
             HardenSsh:
               cwd: "/tmp/ssh"
-              command: "./dh.cfn.openvpn-ec2-harden-ssh.sh"
+              command: "./dh-openvpn-ec2-harden-ssh.sh"
           services:
             sysvinit:
               firewalld:
@@ -290,9 +292,9 @@ Resources:
                   - ".s3."
                   - !Ref "AWS::Region"
                   - ".amazonaws.com/"
-                  - "iptables/dh.cfn.openvpn-ec2-pub-iptables.sh.tar.gz"
+                  - "iptables/dh-openvpn-ec2-pub-iptables.sh.tar.gz"
           files:
-            "/etc/sysctl.d/30-dh.iptables.conf":
+            "/etc/sysctl.d/30-dh-openvpn-iptables.conf":
               content: |
                 net.ipv4.ip_forward = 1
                 net.ipv6.conf.default.disable_ipv6 = 1
@@ -306,10 +308,10 @@ Resources:
               group: root
           commands:
             1_kernelParams:
-              command: "sysctl -p /etc/sysctl.d/30-dh.iptables.conf"
+              command: "sysctl -p /etc/sysctl.d/30-dh-openvpn-iptables.conf"
             2_iptRules:
               cwd: "/tmp/iptables"
-              command: "./dh.cfn.openvpn-ec2-pub-iptables.sh"
+              command: "./dh-openvpn-ec2-pub-iptables.sh"
           services:
             sysvinit:
               iptables:
@@ -325,15 +327,15 @@ Resources:
 #---------------------------
             "/etc/rsyslog.d/30-iptables.conf":
               content: |
-                :msg, startswith, "IPTlog" -/var/log/dh.vpn.server.iptables.log
+                :msg, startswith, "IPTlog" -/var/log/dh-openvpn-server-iptables.log
                 & stop
               mode: '000644'
               owner: root
               group: root
 #---------------------------
-            "/etc/logrotate.d/dh.vpnlogs":
+            "/etc/logrotate.d/dh-openvpn-logs":
               content: |
-                /var/log/dh.vpn.server.*.log
+                /var/log/dh-openvpn-server-*.log
                 {
                  notifempty
                  rotate 21
@@ -354,9 +356,9 @@ Resources:
               owner: root
               group: root
 #---------------------------
-            "/etc/cron.d/dh.vpn.logSchedule":
+            "/etc/cron.d/dh-openvpn-logs-schedule":
               content: |
-                */30 * * * * root /sbin/logrotate /etc/logrotate.d/dh.vpnlogs
+                */30 * * * * root /sbin/logrotate /etc/logrotate.d/dh-openvpn-logs
               mode: '000644'
               owner: root
               group: root
@@ -407,7 +409,7 @@ Resources:
                   - ".s3."
                   - !Ref "AWS::Region"
                   - ".amazonaws.com/"
-                  - "easy-rsa/gen-reqs/dh.easyrsa.openvpn.vars.tar.gz"
+                  - "easy-rsa/gen-reqs/dh-openvpn-easyrsa-vars.tar.gz"
           commands:
             1a_initPKI:
               command: "cp -r /usr/share/easy-rsa/3/* /usr/local/easy-rsa/"
@@ -416,40 +418,50 @@ Resources:
               command: "./easyrsa init-pki"
             2a_genDH:
               cwd: "/usr/local/easy-rsa"
-              command: "mv vars.gen-dh vars"
+              command: "mv vars_gen-dh vars"
             2b_genDH:
               cwd: "/usr/local/easy-rsa"
               command: "./easyrsa gen-dh"
             3a_genSVR:
               cwd: "/usr/local/easy-rsa"
-              command: "mv vars.dh.vpn.server vars"
+              command: "mv vars_dh-openvpn-server vars"
             3b_genSVR:
               cwd: "/usr/local/easy-rsa"
-              command: "./easyrsa gen-req dh.vpn.server nopass"
-            4a_genClnt1:
+              command: "./easyrsa gen-req dh-openvpn-server nopass"
+            4a_genClient1:
               cwd: "/usr/local/easy-rsa"
-              command: "mv vars.dh.vpn.pfSn-ravi.client vars"
-            4b_genClnt1:
+              command: "mv vars_dh-openvpn-pfSn-bmetal-client vars"
+            4b_genClient1:
               cwd: "/usr/local/easy-rsa"
-              command: "./easyrsa gen-req dh.vpn.pfSn-ravi.client nopass"
-            4c_genClnt1:
+              command: "./easyrsa gen-req pfSn-bmetal-client nopass"
+            4c_genClient1:
               cwd: "/usr/local/easy-rsa/pki/private"
               command: 
-                !Sub "aws s3 cp dh.vpn.pfSn-ravi.client.key s3://${ProjectName}/openvpn/client/"
-            5a_genClnt2:
+                !Sub "aws s3 cp pfSn-bmetal-client.key s3://${ProjectName}/openvpn/client/"
+            5a_genClient2:
               cwd: "/usr/local/easy-rsa"
-              command: "mv vars.dh.vpn.pfSn-virt.client vars"
-            5b_genClnt2:
+              command: "mv vars_dh-openvpn-pfSn-virt-client vars"
+            5b_genClient2:
               cwd: "/usr/local/easy-rsa"
-              command: "./easyrsa gen-req dh.vpn.pfSn-virt.client nopass"
-            5c_genClnt2:
+              command: "./easyrsa gen-req pfSn-virt-client nopass"
+            5c_genClient2:
               cwd: "/usr/local/easy-rsa/pki/private"
               command: 
-                !Sub "aws s3 cp dh.vpn.pfSn-virt.client.key s3://${ProjectName}/openvpn/client/"
-            6a_mvReqs:
+                !Sub "aws s3 cp pfSn-virt-client.key s3://${ProjectName}/openvpn/client/"
+            6a_genClient3:
+              cwd: "/usr/local/easy-rsa"
+              command: "mv vars_dh-openvpn-s6-android-client vars"
+            6b_genClient3:
+              cwd: "/usr/local/easy-rsa"
+              command: "./easyrsa gen-req s6-android-client nopass"
+            6c_genClient3:
+              cwd: "/usr/local/easy-rsa/pki/private"
+              command: 
+                !Sub "aws s3 cp s6-android-client.key s3://${ProjectName}/openvpn/client/"
+            7a_mvReqs:
               cwd: "/usr/local/easy-rsa/pki/reqs"
               command: 
-                !Sub "tar -zcf - *.req | aws s3 cp - s3://${ProjectName}/easy-rsa/sign-reqs/dh.easyrsa.openvpn.sign-reqs.tar.gz"
+                !Sub "tar -zcf - *.req | aws s3 cp - s3://${ProjectName}/easy-rsa/sign-reqs/dh-openvpn-easyrsa-sign-reqs.tar.gz"
 
 
 #,,,,,,,,,,,,,,,,,,,,,,,,,,,,
@@ -466,15 +478,15 @@ Resources:
                   - ".s3."
                   - !Ref "AWS::Region"
                   - ".amazonaws.com/"
-                  - "openvpn/server/dh.vpn.server.xxx1194.conf.tar.gz"
+                  - "openvpn/server/dh-openvpn-server-1194.conf.tar.gz"
           files:
             "/usr/local/bin/vpn-server-status":
               content: |
                 #!/bin/bash
-                systemctl status openvpn-server@dh.vpn.server.udp1194
-                systemctl status openvpn-server@dh.vpn.server.tcp1194
-                journalctl -u openvpn-server@dh.vpn.server.udp1194
-                journalctl -u openvpn-server@dh.vpn.server.tcp1194
+                systemctl status openvpn-server@dh-openvpn-server-udp1194
+                systemctl status openvpn-server@dh-openvpn-server-tcp1194
+                journalctl -u openvpn-server@dh-openvpn-server-udp1194
+                journalctl -u openvpn-server@dh-openvpn-server-tcp1194
               mode: '000755'
               owner: ec2-user
               group: ec2-user
@@ -491,7 +503,7 @@ Resources:
               command: "cp dh.pem /etc/openvpn/server/"
             2b_cpSvrKey:
               cwd: "/usr/local/easy-rsa/pki/private"
-              command: "cp dh.vpn.server.key /etc/openvpn/server/"
+              command: "cp dh-openvpn-server.key /etc/openvpn/server/"
             3_enableLogTimestamps:
               cwd: "/usr/lib/systemd/system"
               command: "cp openvpn-server@.service openvpn-server@.service.bak;sed -i 's/ --suppress-timestamps//g' openvpn-server@.service"
@@ -504,8 +516,8 @@ Resources:
 #                enabled: "false"
 #                ensureRunning: "false"
 #                files:
-#                  - "/etc/openvpn/server/dh.vpn.server.udp1194.conf"
-#                  - "/etc/openvpn/server/dh.vpn.server.tcp1194.conf"
+#                  - "/etc/openvpn/server/dh-openvpn-server-udp1194.conf"
+#                  - "/etc/openvpn/server/dh-openvpn-server-tcp1194.conf"
 
 
 #,,,,,,,,,,,,,,,,,,,,,,,,,,,,
